# slot_machine

./: .clang-format  .codedocs  .env  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  config.h.cmake
docs/: CMakeLists.txt  Doxyfile.cfg.cmake
doxygen/: Doxyfile
inc/: big_letters.h  game.h  player.h
po/fr_FR/: locale.po
src/: CMakeLists.txt  big_letters.c  big_letters.h  game.c  game.h  main.c  player.c  player.h  rand.c  rand.h  utils.h
tests/: Makefile
tests/src/: main.c
